--- a/CSS/boligstyling.css
+++ b/CSS/boligstyling.css
@@ -11,6 +11,7 @@ body{
     font-size: 1em;
    border: none;
 padding-bottom: 2em;
+    cursor: pointer;
 
 
 
@@ -38,6 +39,10 @@ padding-bottom: 2em;
     padding-bottom: 2em;
     font-family: 'Heebo', sans-serif;
     font-weight: 300;
+}
+
+img{
+    cursor: pointer;
 }
 
 @media screen and (min-width:640px){
