--- a/CSS/om.css
+++ b/CSS/om.css
@@ -31,7 +31,7 @@ h2 {
 p {
     color: white;
     font-weight: 300;
-
+ font-size: 1em;
     font-family: 'Heebo', sans-serif;
      padding: 10px 10px;
 }
