--- a/CSS/single_boligstyling.css
+++ b/CSS/single_boligstyling.css
@@ -56,6 +56,7 @@
     margin-top: 1em;
     background-color: #e8b931;
     color: white;
+    cursor: pointer;
 }
 
 /*----------------slideshow---------------------*/
