--- a/CSS/single_eventstyling.css
+++ b/CSS/single_eventstyling.css
@@ -58,6 +58,7 @@
     margin-top: 1em;
     background-color: #65b0ba;
     color: white;
+    cursor: pointer;
 }
 
 /*----------------slideshow---------------------*/
@@ -112,6 +113,7 @@ img {vertical-align: middle;}
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
   user-select: none;
+
 }
 
 /* Position the "next button" to the right */
