--- a/CSS/webshop.css
+++ b/CSS/webshop.css
@@ -1,8 +1,37 @@
+    /*   INFORMATIONS ALERT*/
+.alert {
+  padding: 30px;
+  background-color: #005860;
+  color: white;
+
+}
+
+.alert p{
+    font-size: 1.5em;
+    color: white;
+}
+
+.closebtn {
+  margin-left: 15px;
+  color: white;
+
+  font-size: 35px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.closebtn:hover {
+  color: grey;
+}
+
+
 
      /*   MODAL*/
 
 .modal_image{
     width: 100%;
+
 }
 
 #modal {
@@ -16,6 +45,7 @@
          opacity: 0;
          pointer-events: none;
          z-index: 99;
+
 
 
 
@@ -56,7 +86,7 @@
 
 }
 
- .modal_navn{
+.modal_navn{
            font-family: 'Heebo', sans-serif;
          font-weight: 600;
          color: rgba(0, 0, 0, 0.56);
@@ -75,11 +105,44 @@
 
      }
 
-#modal.close {
-         border: none;
+
+.modal_close {
+        padding: 10px 10px;
+  color: black;
+border: none;
+  font-size: 25px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+     }
+
+.kob {
+         text-decoration: none;
+     }
+
+.kobet {
+         padding: 10px 20px;
+         font-family: 'Heebo', sans-serif;
+         font-weight: 300;
+         font-size: 1em;
+         text-decoration: none;
+
+         margin: 0 auto;
+
+         background-color: white;
+         color: rgba(0, 0, 0, 0.56);
+         border: 0.1px solid rgba(0, 0, 0, 0.56);
+
+
+
+         display: block;
+         margin-bottom: 0.4em;
+        cursor: pointer;
      }
 
 
+
+  /*   MODAL RESPONSIV*/
 
  @media screen and (min-width:560px) {
 
@@ -99,6 +162,16 @@
 
      }
 
+.modal_close {
+        padding: 10px 10px;
+  color: black;
+
+  font-size: 30px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+     }
+
 
 
 
@@ -107,8 +180,6 @@
 
 
      }
-
-
 
 @media screen and  (min-width:1000px) {
     .modal_image{
@@ -148,24 +219,31 @@
          text-align: center
          margin-left: 360px;
     }
+
+    .modal_close {
+        padding: 10px 10px;
+  color: black;
+
+  font-size: 35px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+     }
 }
-
-
-
-
-
 
 
      /*   NAVIGATION*/
 
 
 .menu_item{
-         font-size: 1em;
-        color: rgba(0, 0, 0, 0.56);
-         font-family: 'Heebo', sans-serif;
-         font-weight: 300;
-         margin-bottom: 1em;
-          border: none;
+    font-size: 1em;
+    color: rgba(0, 0, 0, 0.56);
+    font-family: 'Heebo', sans-serif;
+    font-weight: 300;
+    margin-bottom: 1em;
+    border: none;
+    background-color: none;
+    cursor: pointer;
     background-color: none;
 
 
@@ -173,10 +251,6 @@
 
 .knapper {
 text-align: center;
-         border: none;
-
-background-color: none;
-         margin-bottom: 3em;
 
      }
 
@@ -185,7 +259,7 @@ p {
          font-weight: 300;
          color: rgba(0, 0, 0, 0.56);
          text-decoration: none;
-         font-size: 0.8em;
+         font-size: 1 em;
         margin-top: 10px;
         text-align: center;
      }
@@ -213,17 +287,21 @@ h1 {
 
 
 
+
      }
 
 .vare_container {
          font-family: 'Heebo', sans-serif;
          display: inline-table;
-         padding: 40px 40px;
+         padding: 20px 20px;
          margin: 20px 20px;
+         cursor: pointer;
+
+
+
+
 
      }
-
-
 
 .pris {
 
@@ -235,28 +313,6 @@ h1 {
          margin-bottom: 10px;
      }
 
-.kob {
-         text-decoration: none;
-     }
-
-.kobet {
-         padding: 10px 20px;
-         font-family: 'Heebo', sans-serif;
-         font-weight: 300;
-         font-size: 1em;
-         text-decoration: none;
-
-         margin: 0 auto;
-
-         background-color: white;
-         color: rgba(0, 0, 0, 0.56);
-         border: 0.1px solid rgba(0, 0, 0, 0.56);
-
-
-
-         display: block;
-         margin-bottom: 0.4em;
-     }
 
 .title {
          text-align: center;
@@ -277,7 +333,6 @@ h1 {
   -webkit-column-gap: 40px; /* Chrome, Safari, Opera */
   -moz-column-gap: 40px; /* Firefox */
   column-gap: 40px;
-
 
 
 
@@ -310,33 +365,18 @@ h1 {
 
 }
 
-@media screen and (min-width:728px) {
-
-
-
-         .column {
-             column-count: 2;
-
-
-             width: 70%;
-
-
-         }
-
-    .
-
-     }
 
 @media screen and (min-width:1000px) {
 
 
 
     .column {
+        margin: 0 auto;
 
 
-      -webkit-column-count: 2; /* Chrome, Safari, Opera */
-  -moz-column-count: 2; /* Firefox */
-  column-count: 2;
+      -webkit-column-count: 3; /* Chrome, Safari, Opera */
+  -moz-column-count: 3; /* Firefox */
+  column-count: 3;
 
   -webkit-column-gap: 5%; /* Chrome, Safari, Opera */
   -moz-column-gap: 5%; /* Firefox */
