--- a/CSS/home.css
+++ b/CSS/home.css
@@ -210,6 +210,10 @@ body {
 
 
 /*NYESTE PROJEKT*/
+.row1{
+        background-color: #005860;
+}
+
 
 .projektListview {
    background-color: #005860;
