--- a/CSS/header.css
+++ b/CSS/header.css
@@ -105,33 +105,51 @@ nav.show {
 
 @media screen and (min-width:768px) {
 
+    .burgermenu {
+        display: none;
+    }
 
     .mobil{
         display: none;
     }
 
-    .desktop{
+    .desktop_nav{
         margin-bottom: 50px;
+              display: grid;
+           max-height: 200px;
+
+
     }
 
+    .list {
+    padding-top: 30px;
+    cursor: pointer;
+    text-align: center;
+    font-family: heebo, sans-serif;
+    text-decoration: none;
+    color: black;
+    font-weight: 100;
+}
 
-
-    nav {
-        max-height: 200px;
-        display: grid;
+    .billede_li{
+         margin-top: -10%;
+    cursor: pointer;
 
     }
+
 
 
     .nav_logo {
 
         display: block;
         justify-self: center;
+
+
+
+
     }
 
-    .burgermenu {
-        display: none;
-    }
+
 
     ul {
         display: grid;
@@ -141,30 +159,46 @@ nav.show {
     }
 
     a{
-        text-decoration: none;
+    text-decoration: none;
+     text-align: center;
+    font-family: heebo, sans-serif;
+    text-decoration: none;
+    color: black;
+    font-weight: 100;
+     margin-bottom: 5%;
+     margin-top: 5%;
+
+
+
+
     }
 
-.dropdown {
+        .dropdown {
 overflow: hidden;
     transition: .3s;
 
 
 
+
+
 }
+
+
 
 .dropdown-content {
     z-index: 90;
-  display: none;
-  background-color: white;
+display:none;
 
-width: 20%;
+
+width: 15%;
   padding: 12px 16px;
-    position: absolute;
 
-    left: 0%;
+position: absolute;
+    top: 19%;
     transition: .3s;
-    text-align-last: left;
-     cursor: pointer;
+        text-align-last: center;
+    left: 2%;
+
 
 
 
@@ -174,62 +208,19 @@ width: 20%;
 }
 
 .dropdown:hover .dropdown-content {
-    display: block;}
+    display: inline-grid;
+    grid-auto-rows: 2;
+    background-color: white;
+    position: fixed;
+    text-align-last: center;
 
 
 
-
-@media screen and (min-width:800px) {
-    .dropdown-content {
-
-width: 15%;
-
-    left: 3%;
+    }
 
 
 
-    }}
-@media screen and (min-width:825px) {
-    .dropdown-content {
-
-width: 15%;
-
-    left: 1%;
+}
 
 
-
-    }}
-
-@media screen and (min-width:1082px) {
-    .dropdown-content {
-
-width: 15%;
-
-    left: 4%;
-
-
-
-    }}
-
-@media screen and (min-width:1262px) {
-    .dropdown-content {
-
-width: 15%;
-
-    left: 5%;
-
-
-
-    }}
-
-@media screen and (min-width:1468px) {
-    .dropdown-content {
-
-width: 15%;
-
-    left: 5.5%;
-
-
-
-    }}
 
