--- a/CSS/boligstyling.css
+++ b/CSS/boligstyling.css
@@ -12,10 +12,7 @@ body{
    border: none;
 padding-bottom: 2em;
     cursor: pointer;
-
-
-
-
+    color: white;
 
 }
 
@@ -39,6 +36,7 @@ padding-bottom: 2em;
     padding-bottom: 2em;
     font-family: 'Heebo', sans-serif;
     font-weight: 300;
+    color: white;
 }
 
 img{
