--- a/CSS/kontakt.css
+++ b/CSS/kontakt.css
@@ -5,8 +5,6 @@
         margin-bottom: 40px;
         margin-top: 40px;
 
-
-
       }
 
 #Kontakt_information h1{
@@ -23,6 +21,7 @@
           font-weight: 300;
           color: rgba(0, 0, 0, 0.56);
           text-decoration: none;
+        color: white;
 
       }
 
@@ -77,10 +76,11 @@ h5{
     margin-bottom: 40px;
     margin-top: 40px;
     font-size: 1em;
+      }
 
-
-
-
+    #Kontakt_information h4, a{
+        color: ;
+color: #65b0ba;
       }
 
     .column {
