--- a/CSS/single_boligstyling.css
+++ b/CSS/single_boligstyling.css
@@ -104,6 +104,7 @@ img {vertical-align: middle;}
   padding: 16px;
   margin-top: -22px;
   color: white;
+    background-color: lightgray;
   font-weight: bold;
   font-size: 18px;
   transition: 0.6s ease;
