--- a/CSS/single_eventstyling.css
+++ b/CSS/single_eventstyling.css
@@ -30,8 +30,10 @@
     text-align: center;
     padding-left: 1.5em;
     padding-right: 1.5em;
+    padding-top: 2em;
     font-size: 1.6em;
     color: #005860;
+
 }
 
 .data-langbeskrivelse{
@@ -40,6 +42,7 @@
     padding-left: 2em;
     padding-right: 2em;
     padding-bottom: 1.5em;
+    color: white;
 }
 
 .data-billede{
@@ -56,7 +59,7 @@
     padding-right: 1.5em;
     margin-left: 2em;
     margin-top: 1em;
-    background-color: #65b0ba;
+    background-color: #6c9a95;
     color: white;
     cursor: pointer;
 }
@@ -108,6 +111,7 @@ img {vertical-align: middle;}
   padding: 16px;
   margin-top: -22px;
   color: white;
+    background-color: lightgray;
   font-weight: bold;
   font-size: 18px;
   transition: 0.6s ease;
