--- a/CSS/header.css
+++ b/CSS/header.css
@@ -153,9 +153,12 @@ nav.show {
         font-weight: 100;
         margin-bottom: 5%;
         margin-top: 5%;
+
     }
 
     .dropdown {
+     position: relative;
+  display: inline-block;
         overflow: hidden;
         transition: .3s;
     }
