--- a/CSS/header.css
+++ b/CSS/header.css
@@ -73,7 +73,6 @@ a:hover {
 }
 
 nav {
-    max-height: 0px;
     overflow: hidden;
     transition: 0s;
 }
@@ -110,7 +109,7 @@ nav.show {
     .desktop_nav {
         margin-bottom: 50px;
         display: grid;
-        max-height: 200px;
+
 
 
     }
@@ -151,13 +150,12 @@ nav.show {
         text-decoration: none;
         color: black;
         font-weight: 100;
-        margin-bottom: 5%;
-        margin-top: 5%;
+
 
     }
 
     .dropdown {
-     position: relative;
+
   display: inline-block;
         overflow: hidden;
         transition: .3s;
@@ -167,22 +165,30 @@ nav.show {
         z-index: 90;
         display: none;
 
+   position:absolute;
+        top: 60px;
 
-        width: 15%;
-        padding: 12px 16px;
+        width: 20%;
 
-        position: absolute;
-        top: 13%;
+
         transition: .3s;
         text-align-last: center;
-        left: 2%;
+
     }
 
-    .dropdown:hover .dropdown-content {
-        display: inline-grid;
+  .dropdown-content a {
+  padding: 12px 16px;
+  text-decoration: none;
+ cursor: pointer;
 
-        background-color: white;
-        position: fixed;
+
+
+}
+    .dropdown:hover .dropdown-content {
+       display:inline-grid;
+
+        color: black;
+/*        position: fixed;*/
         text-align-last: center;
     }
 }
