--- a/CSS/om.css
+++ b/CSS/om.css
@@ -22,9 +22,7 @@ background-color: #6C9A95;
 }
 
 h2 {
-    color: #0B584D;
-    font-family: 'Heebo', sans-serif;
-    padding: 10px 10px;
+ display: none;
 
 }
 
