--- a/CSS/boligstyling.css
+++ b/CSS/boligstyling.css
@@ -16,6 +16,8 @@ padding-bottom: 2em;
 
 }
 
+
+
 .stylingeventListview{
     background-color: #db938f;
 
@@ -39,10 +41,6 @@ padding-bottom: 2em;
     color: white;
 }
 
-img{
-    cursor: pointer;
-}
-
 @media screen and (min-width:640px){
 
     .description{
@@ -59,7 +57,6 @@ img{
 }
 }
 
-
 @media screen and (min-width:920px){
 
 
@@ -70,8 +67,6 @@ img{
 }
 }
 
-
-
 @media screen and (min-width:1300px){
 
     .description{
@@ -80,6 +75,18 @@ img{
     font-size: 1.2em;
 }
 }
+
+
+img{
+    cursor: pointer;
+}
+
+img:hover{
+    opacity: 0.6;
+}
+
+
+
 
 /*styling af event boksene*/
 
