--- a/CSS/home.css
+++ b/CSS/home.css
@@ -161,6 +161,11 @@ body {
     width: 100%;
 }
 
+.image:hover{
+    opacity: 0.6;
+}
+
+
 
 
 
@@ -253,6 +258,11 @@ body {
     display: block;
 
 }
+.projektListview img:hover{
+    opacity: 0.6;
+}
+
+
 
 
 @media screen and (min-width:767px) {
@@ -271,6 +281,10 @@ body {
 
 
     }
+
+
+
+
 
 .column {
    flex: 50%;
