--- a/CSS/webshop.css
+++ b/CSS/webshop.css
@@ -383,9 +383,9 @@ h1 {
   -moz-column-gap: 5%; /* Firefox */
   column-gap: 5%;
 
-  -webkit-column-rule: 4px double #0B584D; /* Chrome, Safari, Opera */
-  -moz-column-rule: 4px double #0B584D; /* Firefox */
-  column-rule: 4px double #0B584D;
+  -webkit-column-rule: 4px  #0B584D; /* Chrome, Safari, Opera */
+  -moz-column-rule: 4px  #0B584D; /* Firefox */
+  column-rule: 4px  #0B584D;
 
 
      }
