--- a/CSS/home.css
+++ b/CSS/home.css
@@ -1,7 +1,27 @@
 
+
+body {
+    display: block;
+    font-family: 'Heebo', sans-serif;
+     margin: 0;
+}
+
+.image {
+    width: 100%;
+}
+
+.image:hover{
+    opacity: 0.6;
+}
+
+
+
+
+
 /* MOBIL BILLEDE*/
 .mobil_photo img{
     width: 100%;
+    height: 20em;
 }
 
 
@@ -146,23 +166,6 @@ display: none;
 
 
 /*OM SIDE*/
-
-
-
-
-body {
-    display: block;
-    font-family: 'Heebo', sans-serif;
-     margin: 0;
-}
-
-.image {
-    width: 100%;
-}
-
-.image:hover{
-    opacity: 0.6;
-}
 
 
 
